# harmonies-ext

./: NEXT_PHASE.md  README.md  pyproject.toml  rules.md
src/harmonies/: __init__.py  board.py  cards.py  cli.py  game.py  model.py  scoring.py
src/harmonies.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/harmonies/data/: base_animals.json
src/harmonies/ui/: __init__.py  app.py  controller.py  layout.py  render.py  session.py
tests/: test_board.py  test_cards.py  test_game.py  test_scoring.py  test_ui.py
